--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Actividad 11">
-        <title>Actividad 13: Margenes y rellenos</title>
+        <title>Actividad 12: Introducción a CSS</title>
         <link rel="stylesheet" href=".\css\estilo.css">
     </head>
     </head>
@@ -17,7 +17,6 @@
             <li><a href="Enlace 1">Enlace 1</a></li>
             <li><a href="Enlace 2">Enlace 2</a></li>
             <li><a href="Enlace 3">Enlace 3</a></li>  
-            <li><a href="Enlace 4">Enlace 4</a></li>
         </ul>
         </nav>
         </header>
